added responsiveness to image

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
 
     <div id="video-section">
         <video autoplay muted loop id="bg-video">
-          <source src="video1.mp4"video/mp4">
+          <source src="video1.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
+        <img src="image2.jpg" alt="Background Image" id="bg-image" >
       </div>
 
     <section id="section-1">
