added responsiveness to rotating text for different devices

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
         <img src="image2.jpg" alt="Background Image" id="bg-image" >
       </div>
 
+      <div class="hero-overlay">
+        <h1 id="hero-text">Drift</h1>
+        <p>Flow with adventure</p>
+    </div>
+
     <section id="section-1">
         <div class="container-lg text-center">
           <h1 class="mt-4 animate__animated animate__fadeInDown">
