fixed dropdown href

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                       One way
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <li><a class="dropdown-item" href="#" onclick="updateDropdownText(this, 'dropdownMenuButton1')">One way</a></li>
-                      <li><a class="dropdown-item" href="#"onclick="updateDropdownText(this, 'dropdownMenuButton1')" >Return</a></li>
+                      <li><a class="dropdown-item" href="javascript:void(0)" onclick="updateDropdownText(this, 'dropdownMenuButton1')">One way</a></li>
+                      <li><a class="dropdown-item" href="javascript:void(0)"onclick="updateDropdownText(this, 'dropdownMenuButton1')" >Return</a></li>
                     </ul>
                   </div>
 
@@ -116,8 +116,8 @@
                       Economy
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <li><a class="dropdown-item" href="#" onclick="updateDropdownText(this, 'dropdownMenuButton2')">Economy</a></li>
-                      <li><a class="dropdown-item" href="#" onclick="updateDropdownText(this, 'dropdownMenuButton2')">Business</a></li>
+                      <li><a class="dropdown-item" href="javascript:void(0)" onclick="updateDropdownText(this, 'dropdownMenuButton2')">Economy</a></li>
+                      <li><a class="dropdown-item" href="javascript:void(0)" onclick="updateDropdownText(this, 'dropdownMenuButton2')">Business</a></li>
                     </ul>
                   </div>
                  </div>
