--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Flatpickr JS -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <link rel="icon" type="image/png" href="icon.png">
 
 </head>
 <body>
